--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>org.johnnei</groupId>
     <artifactId>javatorrent-gui</artifactId>
     <packaging>jar</packaging>
+    <version>0.5.0-SNAPSHOT</version>
     <name>JavaTorrent User Interface</name>
     <description>JavaTorrent implementation as GUI</description>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <dependency.org.johnnei.javatorrent>0.05.0-SNAPSHOT</dependency.org.johnnei.javatorrent>
+        <dependency.org.apache.logging.log4j.log4j-api>2.5</dependency.org.apache.logging.log4j.log4j-api>
+        <dependency.org.apache.logging.log4j.log4j-slf4j-impl>2.5</dependency.org.apache.logging.log4j.log4j-slf4j-impl>
+        <dependency.org.apache.logging.log4j.log4j-core>2.5</dependency.org.apache.logging.log4j.log4j-core>
+        <dependency.org.johnnei.javatorrent>0.5.2-SNAPSHOT</dependency.org.johnnei.javatorrent>
+        <dependency.org.slf4j.slf4j-api>1.7.13</dependency.org.slf4j.slf4j-api>
     </properties>
     <dependencies>
         <dependency>
@@ -34,18 +40,22 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+            <version>${dependency.org.slf4j.slf4j-api}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
+            <version>${dependency.org.apache.logging.log4j.log4j-api}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
+            <version>${dependency.org.apache.logging.log4j.log4j-core}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${dependency.org.apache.logging.log4j.log4j-slf4j-impl}</version>
         </dependency>
     </dependencies>
 </project>
