--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <dependency.org.apache.logging.log4j.log4j-api>2.5</dependency.org.apache.logging.log4j.log4j-api>
         <dependency.org.apache.logging.log4j.log4j-slf4j-impl>2.5</dependency.org.apache.logging.log4j.log4j-slf4j-impl>
         <dependency.org.apache.logging.log4j.log4j-core>2.5</dependency.org.apache.logging.log4j.log4j-core>
-        <dependency.org.johnnei.javatorrent>0.5.2-SNAPSHOT</dependency.org.johnnei.javatorrent>
+        <dependency.org.johnnei.javatorrent>0.6.0</dependency.org.johnnei.javatorrent>
         <dependency.org.slf4j.slf4j-api>1.7.13</dependency.org.slf4j.slf4j-api>
     </properties>
     <dependencies>
